--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "sampledeploy",
+  "name": "app_name",
   "version": "0.0.0",
   "authors": [
     "cnichols <mellowdious@mail.com>"
@@ -20,6 +20,7 @@
     "angular": "~1.4.7",
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.5",
-    "angular-bootstrap": "~0.14.1"
+    "angular-bootstrap": "~0.14.1",
+    "lodash": "~3.10.1"
   }
 }
