--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sampledeploy",
+  "name": "app_name",
   "version": "0.0.0",
   "private": true,
   "engines": {
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "postinstall": "bower install",
-    "setup": "rm -rf node_modules public/bower_components && npm i && bower i"
+    "setup": "rm -rf node_modules public/vendor && touch .env && npm i && bower i"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
