--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "express": "~4.13.1",
     "mongoose": "^4.1.10",
     "morgan": "~1.6.1",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "jsonwebtoken": "^5.4.0"
   }
 }
