--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^1.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-jwt": "^3.1.0",
     "mongoose": "^4.1.10",
     "morgan": "~1.6.1",
     "passport": "^0.3.0",
